Added smart pull to gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
 	br = branch
     	hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 	go = checkout
+  sp = smart-pull
 	type = cat-file
 	dump = cat-file
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
