Added to tmux conf dotfile

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,16 @@ bind r source-file ~/.tmux.conf
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+
+# 256 colors
+set -g default-terminal "screen-256color"
+
+# Moving among panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# default the shell to zsh
+set-option -g default-shell /bin/zsh
